syntax="proto3";
package org.example;
message User{
  int32 id=1;
  string name=2;
  string roll=3;
}

message  UserRequest{
  int32 id=1;
}

service UserService{
  rpc GetUser(UserRequest) returns (User);
  rpc CreateUser(User)  returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserRequest) returns (User);
}